--- a/Labwork4/Labwork4/Config/DefaultEngine.ini
+++ b/Labwork4/Labwork4/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Script/Labwork4.NetGameInstance
 GameDefaultMap=/Game/Maps/Lobby.Lobby
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_NetGameMode.BP_NetGameMode_C
