--- a/Labwork4/Labwork4/Config/DefaultInput.ini
+++ b/Labwork4/Labwork4/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Lookup",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
